# MCProxy

./: .gitignore  Cargo.toml  LICENSE.md  MIDDLEWARE.md  README.md  example-config.json
docs/: MIDDLEWARE.md  NOTIFICATIONS.md  SEARCH.md
src/: config.rs  error.rs  http_server.rs  main.rs  proxy.rs
src/middleware/: client.rs  examples.rs  mod.rs  proxy.rs  registry.rs
src/middleware/client_middleware/: logging.rs  mod.rs  security.rs  tool_filter.rs
src/middleware/proxy_middleware/: description_enricher.rs  mod.rs  tool_filter.rs  tool_search.rs
