[package]
name = "mcproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rmcp = { version = "0.2.1", features = [
    "client",
    "server",
    "macros",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-sse-client",
    "transport-io",
    "reqwest",
    "auth",
] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
url = "2.5.0"
reqwest = { version = "0.12", features = ["json"] }
libc = "0.2"
atty = "0.2"
